--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -1,22 +1,3 @@
-# i3blocks config file changed for EndeavourOS-i3 setup
-
-# source is available here:
-# https://raw.githubusercontent.com/endeavouros-team/endeavouros-i3wm-setup/main/etc/skel/.config/i3/i3blocks.conf
-# Maintainer: joekamprad [joekamprad //a_t// endeavouros.com]
-# Former Visual Designer: Florent Valetti [@FLVAL EndeavourOS]
-# created for i3wm setup on EndeavourOS
-# https://endeavouros.com
-
-# cheatsheet for icon fonts used on the block-bar:
-# https://fontawesome.com/v4.7/cheatsheet/
-
-# --> to update this run the following command:
-# wget --backups=1 https://raw.githubusercontent.com/endeavouros-team/endeavouros-i3wm-setup/main/etc/skel/.config/i3/i3blocks.conf -P ~/.config/i3/
-
-# Please see man i3blocks for a complete reference!
-# The man page is also hosted at http://vivien.github.io/i3blocks
-
-
 # List of valid properties:
 #
 # align
@@ -109,9 +90,9 @@ interval=2
 #command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
 #interval=30
 
-[bandwidth]
-command=~/.config/i3/scripts/bandwidth2
-interval=persist
+#[bandwidth]
+#command=~/.config/i3/scripts/bandwidth2
+#interval=persist
 
 # Battery indicator
 [battery]
